# dnu

./: README.md  REAME.md  check_subscribe_channel_update.py  config.toml  dnu.py  dnu_backend.py  dun.sql  entity.py  initial_subscribe_channel.py  pyproject.toml  shutdown_server.py  sqlite.py
YoutubeDl.Wpf/: App.xaml  MainWindow.xaml  YoutubeDl.Wpf.csproj  update.sql
YoutubeDl.Wpf.Tests/: YoutubeDl.Wpf.Tests.csproj
YoutubeDl.Wpf/Models/: BackendInstance.cs  BackendService.cs  BaseContext.cs  DateTimeExtensions.cs  LoggerService.cs  ObservableSettings.cs  QueuedTextBoxSink.cs  SubscribeChannel.cs  SubscribeChannelContext.cs  Video.cs  VideoContext.cs
YoutubeDl.Wpf/ViewModels/: HomeViewModel.cs  MainWindowViewModel.cs  SubScibeChannelViewModel.cs
YoutubeDl.Wpf/Views/: HomeView.xaml  PresetDialogView.xaml  SettingsView.xaml  SubScibeChannelView.xaml  SubScibeChannelView.xaml.cs
dnu_ui/: .gitignore  App.axaml  App.axaml.cs  dnu_ui.csproj  dnu_ui.sln
dnu_ui.Desktop/: Program.cs  dnu_ui.Desktop.csproj
dnu_ui/ViewModels/: MainViewModel.cs  ViewModelBase.cs
dnu_ui/Views/: MainView.axaml  MainView.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs
doc/: dnu.tldr
ui/: ui.sln
ui/ui/: App.axaml  App.axaml.cs  Program.cs  Resources.Designer.cs  Resources.resx  ViewLocator.cs  ui.csproj
ui/ui/Models/: Video.cs  models.cs
ui/ui/ViewModels/: MainWindowViewModel.cs  VideoViewModel.cs  ViewModelBase.cs
ui/ui/Views/: MainWindow.axaml  MainWindow.axaml.cs
