[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Canwaiting", email = "455021735@qq.com"},
]
dependencies = [
    "yt-dlp>=2023.10.7",
    "peewee>=3.16.3",
    "pillow>=10.0.1",
    "pyinstaller>=4.5.1",
    "requests>=2.31.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

